--- a/people/index.html
+++ b/people/index.html
@@ -100,28 +100,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/gautam.jpeg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Gautam Reddy</b></p1><br />
-            <p2>NSF-Simons Postdoctoral Fellow</p2>
-            <p></p>
-            <p3><i>gautam_nallamala [at] fas.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/artur.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Artur Rego-Costa</b></p1><br />
-            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p>Artur first joined the lab on 2017 as an exchange M.S. student, and then as a Ph.D. student in 2018. He earned his B.S from the U. of Brasília, and joint M.S. from U. of Groningen and U. of Montpellier. He is currently using deep-sequencing data from experimentally evolved yeast populations to answers questions about predictability of evolutionary dynamics. </p>
-            <p3><i>rego-costa [at] g.harvard.edu</i> <a href="http://arego-costa.com">[website]</a></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/shreyas.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -140,17 +118,6 @@
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
             <p>Alief earned his BA in maths and biology from Carleton College and joined the lab in 2019. He is studying how repetitive exposure to COVID-19 and flu vaccinations affects the binding affinity and the recognition breadth of B cell receptors within a repertoire.</p>
             <p3><i>amoulana [at] g.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/tanush.jpeg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Tanush Jagdish</b></p1><br />
-            <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
-            <p>Tanush joined the lab in 2019. He is currently working to apply molecular barcoding methods to the E. coli Long-term evolution experiment.</p>
-            <p3><i>tanush [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -177,17 +144,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/jeffrey.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Jeffrey Chang</b></p1><br />
-            <p2>Graduate Student in Physics</p2>
-            <p>Jeffrey joined the lab in 2021. He is interested in understanding the structure and statistics of protein-protein interaction landscapes.</p>
-            <p3><i>jeffrey_chang [at] g.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/jack.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -204,14 +160,52 @@
         <div class="seven columns">
             <p1><b>Berk Alpay</b></p1><br />
             <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
-            <p>Berk joined the lab in 2022. He is working to understand evolutionary dynamics in the immune system using a combination of in vitro directed evolution and random mutagenesis to analyze the landscapes of antibody binding affinities.</p>
+            <p>Berk earned his degrees in Computer Science and Mathematics at the University of Connecticut, joining the lab in 2022. He investigates directed evolution's traversal of genotype-phenotype maps, theoretically and using in vitro assays of antibody binding affinities.</p>
             <p3><i>berk_alpay [at] g.harvard.edu</i> <a href="http://berkalpay.com">[website]</a></p3>
+        </div>
+    </div>
+        <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/alex_poret.jpeg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Alex Poret</b></p1><br />
+            <p2>Graduate Student in Biophysics</p2>
+            <p>Alex joined the lab in 2023 after completing her B. Sc. in Biological Engineering from MIT in 2022. She is developing gene editing and barcoding systems to probe how epistasis constrains the trajectory of evolution in microorganisms.</p>
+            <p3><i>aporet [at] g.harvard.edu</i></p3>
+        </div>
+    </div>
+        <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/jenya.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Jenya Belousova</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p>Jenya received her specialist degree in bioengineering and bioinformatics from Moscow State University in 2023 and then joined the lab. She is interested in fundamental evolutionary mechanisms and is studying them using artificial evolutionary experiments on yeast.</p>
+            <p3><i>ebelousova [at] g.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/shreyas_pai.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Shreyas Pai</b></p1><br />
+            <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
+            <p>Shreyas earned his BA in Natural Sciences (Zoology) at the University of Cambridge in 2022, and joined the lab in 2023. He is working on long term experimental evolution in yeast and E. coli, with a focus on evolutionary dynamics, coexistence, and diversification.</p>
+            <p3><i>shreyaspai [at] g.harvard.edu</i></p3>
         </div>
     </div>
 
     <div class="alumni">
-        <!-- <p><strong><u>Lab Alumni</u><p></strong> -->
         <h3>Lab Alumni</h3>
+        <p><strong><a href="https://arego-costa.com/">Artur Rego-Costa</strong></a><br />
+        Bioinformatics Scientist, Regeneron.</p>
+        <p><strong><a href="https://reddylab.physics.princeton.edu/">Gautam Reddy</strong></a><br />
+        Assistant Professor, Princeton.</p>
+        <p><strong>Tanush Jagdish</strong><br />
+        Consultant, McKinsey.</p>
         <p><strong><a href="https://aphillipslab.ucsf.edu/">Angela Phillips</strong></a><br />
         Assistant Professor, University of California, San Francisco.</p>
         <p><strong>Jiseon Min</strong><br />
