update Alief's bio

--- a/people/index.html
+++ b/people/index.html
@@ -116,7 +116,7 @@
         <div class="seven columns">
             <p1><b>Alief Moulana</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p>Alief earned his BA in maths and biology from Carleton College and joined the lab in 2019. He is studying how repetitive exposure to COVID-19 and flu vaccinations affects the binding affinity and the recognition breadth of B cell receptors within a repertoire.</p>
+            <p>Alief earned a BA in math and biology from Carleton College where they studied microbial evolution in the deep-sea hydrothermal vents before joining the lab in 2019. He is currently studying the co-evolution between viruses and immune cells, especially within the context of ever-changing molecular recognition landscapes.</p>
             <p3><i>amoulana [at] g.harvard.edu</i></p3>
         </div>
     </div>
