--- a/people/index.html
+++ b/people/index.html
@@ -197,6 +197,17 @@
             <p3><i>shreyaspai [at] g.harvard.edu</i></p3>
         </div>
     </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/caelan.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Caelan Brooks</b></p1><br />
+            <p2>Graduate Student in Physics</p2>
+            <p>Caelan graduated from Kutztown University with a BS in Physics in 2021 and joined the lab in 2023. She develops theoretical models to understand underlying epistatic structure in genotype-phenotype maps and is interested in the dynamics of that structure under different environmental conditions.</p>
+            <p3><i>caelanbrooks [at] g.harvard.edu</i></p3>
+        </div>
+    </div>
 
     <div class="alumni">
         <h3>Lab Alumni</h3>
