--- a/people/index.html
+++ b/people/index.html
@@ -100,6 +100,17 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
+            <img src='headshots/caroline.png' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Caroline Holmes</b></p1><br />
+            <p2>Postdoctoral Fellow</p2>
+            <p>Caroline joined the Desai Lab in September 2023. She earned her Ph.D. in theoretical biophysics at Princeton, working with Bill Bialek. In the Desai Lab, Caroline is using a combination of experimental, theoretical, and computational methods to analyze the structure of high-dimensional genotype-phenotype maps. </p>
+            <p3><i>carolineholmes [at] fas.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
             <img src='headshots/shreyas.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -252,8 +263,8 @@
         Data Scientist, Khan Academy.</p>
         <p><strong><a href="https://bgoodlab.github.io">Benjamin H. Good</strong></a><br />
         Assistant Professor, Stanford University.</p>
-        <p><strong><a href="https://quakelab.stanford.edu/people/elizabeth-jerison">Elizabeth R. Jerison</strong></a><br />
-        Postdoc, Quake Lab, Stanford University.</p>
+        <p><strong><a href="https://jerisonlab.uchicago.edu/">Elizabeth R. Jerison</strong></a><br />
+        Assitant Professor, University of Chicago.</p>
         <p><strong>Evgeni M. Frenkel</strong><br />
         Postdoc, Sabatini Lab, Whitehead Institute.</p>
         <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Katya Kosheleva</strong></a><br />
