--- a/people/index.html
+++ b/people/index.html
@@ -246,7 +246,7 @@
         <p><strong><a href="https://www.mcdonald-lab.com">Michael J. McDonald</strong></a><br />
         Assistant Professor, Monash University.</p>
         <p><strong><a href="http://sklab.science">Sergey Kryazhimskiy</strong></a><br />
-        Assistant Professor, University of California San Diego.</p>
+        Associate Professor, University of California San Diego.</p>
         <p><strong><a href="http://unipedalape.weebly.com/">J. David van Dyken</strong></a><br />
         Assistant Professor, University of Miami.</p>
         <p><strong><a href="http://www.perronlab.net">Gabriel Perron</strong></a><br />
