--- a/publications/index.html
+++ b/publications/index.html
@@ -63,8 +63,10 @@
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
             <ul id="publication_list">                
-
-                <li><strong>Dupic, T.</strong>, <strong>A. M. Phillips</strong>, and <strong>M. M. Desai</strong>. Protein landscapes are not so simple: on reference-free versus reference-based inference. <em>BioRxiv</em> 577800 (2024). <a href="PDFs/dupicphillipsdesai24.pdf">[pdf]</a>
+                
+                <li><strong>Alpay, B.</strong> and <strong>M. M. Desai</strong>. Effects of selection stringency on the outcomes of directed evolution. <em>bioRxiv</em> 598029 (2024). <a href="https://www.biorxiv.org/content/10.1101/2024.06.09.598029v1.full.pdf">[pdf]</a>
+                <li><strong>Alpay, B.</strong>, <strong>J. M. Higgins</strong>, and <strong>M. M. Desai</strong>. Some statistical theory for interpreting reference distributions. <em>medRxiv</em> 24309680 (2024). <a href="https://www.medrxiv.org/content/10.1101/2024.07.23.24309680.full.pdf">[pdf]</a>
+                <li><strong>Dupic, T.</strong>, <strong>A. M. Phillips</strong>, and <strong>M. M. Desai</strong>. Protein landscapes are not so simple: on reference-free versus reference-based inference. <em>bioRxiv</em> 577800 (2024). <a href="PDFs/dupicphillipsdesai24.pdf">[pdf]</a>
                 <li><strong>Melissa, M. J.</strong> and <strong>M. M. Desai</strong>. A dynamical limit to evolutionary adaptation. <em>PNAS</em> 121:e2312845121 (2024). <a href="PDFs/melissadesai24.pdf">[pdf]</a>
                 <li><strong>Johnson, M. S.</strong>, <strong>G. Reddy</strong>, and <strong>M. M. Desai</strong>. Epistasis and evolution: recent advances and an outlook for prediction. <em>BMC Biology</em> 21:1-12 (2023). <a href="PDFs/johnsonreddydesai23.pdf">[pdf]</a>
                 <li>Petti, S.*, <strong>G. Reddy*</strong>, and <strong>M. M. Desai</strong>. Inferring sparse structure in genotype–phenotype maps. <em>Genetics</em> 225:iyad127 (2023). <a href="PDFs/pettireddydesai23.pdf">[pdf]</a>
