--- a/people/index.html
+++ b/people/index.html
@@ -94,7 +94,7 @@
         <div class="seven columns">
             <p1><b>Thomas Dupic</b></p1><br />
             <p2>HFSP Postdoctoral Fellow</p2>
-            <p>Thomas joined the Desai Lab in January 2020. He earned his Ph.D. at UPMC in Paris in theoretical physics then worked on computational immunology with Aleksandra Walczak and Thierry Mora. In the Desai Lab, Thomas is working on mapping the affinity landscape of in-vivo antibodies against various antigens and on understanding the theoretical basis for B-cells evolution.</p>
+            <p>Thomas joined the lab in 2020. He earned his Ph.D. at UPMC in Paris in theoretical physics then worked on computational immunology with Aleksandra Walczak and Thierry Mora. In the Desai Lab, Thomas is working on mapping the affinity landscape of in-vivo antibodies against various antigens and on understanding the theoretical basis for B-cells evolution.</p>
             <p3><i>dupic.thomas [at] gmail.com</i></p3>
         </div>
     </div>
@@ -105,19 +105,30 @@
         <div class="seven columns">
             <p1><b>Caroline Holmes</b></p1><br />
             <p2>Postdoctoral Fellow</p2>
-            <p>Caroline joined the Desai Lab in September 2023. She earned her Ph.D. in theoretical biophysics at Princeton, working with Bill Bialek. In the Desai Lab, Caroline is using a combination of experimental, theoretical, and computational methods to analyze the structure of high-dimensional genotype-phenotype maps. </p>
+            <p>Caroline joined the lab in 2023. She earned her Ph.D. in theoretical biophysics at Princeton, working with Bill Bialek. In the Desai Lab, Caroline is using a combination of experimental, theoretical, and computational methods to analyze the structure of high-dimensional genotype-phenotype maps.</p>
             <p3><i>carolineholmes [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/shreyas.jpg' style="width:100%">
+            <img src='headshots/tatiana.png' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Shreyas Gopalakrishnan</b></p1><br />
-            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p>Shreyas received his B. Sc. in biology from the Indian Institute of Science (IISc) in 2018, and he joined the lab in 2019. He is using QTL mapping in budding yeast to understand the statistical structure of pleiotropy. He is also using long-term experimental evolution in different yeast species to quantify genetic parallelism across species.</p>
-            <p3><i>sgopalakrishnan [at] g.harvard.edu</i></p3>
+            <p1><b>Tatiana Ruiz-Bedoya</b></p1><br />
+            <p2>Postdoctoral Fellow</p2>
+            <p>Tatiana joined in 2024. She earned her Ph.D. in Cell and Systems Biology at the University of Toronto, working with David Guttman and Darrell Desveaux. In the Desai Lab, she's mapping the coevolutionary dynamics between naturally evolved viral antigens and the human immune response.</p>
+            <p3><i>ruizbedoya_tatiana [at] fas.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/joao.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Joao Ascensao</b></p1><br />
+            <p2>Postdoctoral Fellow</p2>
+            <p>Joao earned his Ph.D. in Bioengineering at UC Berkeley, advised by Oskar Hallatschek. He joined the lab in 2024 and is working on how affinity landscapes shape the coevolutionary dynamics of pathogens and the host immune system.</p>
+            <p3><i>joaoascensao [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -222,6 +233,8 @@
 
     <div class="alumni">
         <h3>Lab Alumni</h3>
+        <p><strong>Shreyas Gopalakrishnan</strong></a><br />
+        Postdoc, Petrov Lab, Stanford University</p>
         <p><strong><a href="https://arego-costa.com/">Artur Rego-Costa</strong></a><br />
         Bioinformatics Scientist, Regeneron.</p>
         <p><strong><a href="https://reddylab.physics.princeton.edu/">Gautam Reddy</strong></a><br />
