standardize markdown formatting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <!-- Basic Page Needs
@@ -27,48 +28,50 @@
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– 
     <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    
+
     <script src="js/responsive_menu.js"></script>
 
 </head>
+
 <body>
 
-  <!-- Primary Page Layout
+    <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="container">
-    <div class="row"> 
-        <div class="title_part">
-            <div class="row">
-                <div class="twelve columns">
-                    <h1>The Desai Lab</h1>
+    <div class="container">
+        <div class="row">
+            <div class="title_part">
+                <div class="row">
+                    <div class="twelve columns">
+                        <h1>The Desai Lab</h1>
+                    </div>
                 </div>
             </div>
-        </div> 
- 
-        <div class="topnav twelve columns" id="myTopnav">
-            <a href="./" class="active"><u>Home</u></a>
-            <a href="./research">Research</a>
-            <a href="./publications">Publications</a>
-            <a href="./people">People</a>
-            <a href="./opportunities">Opportunities</a>
-            <a href="./contact">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="menu_change()">
-                <i class="fa fa-bars"></i>
-            </a>
+
+            <div class="topnav twelve columns" id="myTopnav">
+                <a href="./" class="active"><u>Home</u></a>
+                <a href="./research">Research</a>
+                <a href="./publications">Publications</a>
+                <a href="./people">People</a>
+                <a href="./opportunities">Opportunities</a>
+                <a href="./contact">Contact</a>
+                <a href="javascript:void(0);" class="icon" onclick="menu_change()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
         </div>
     </div>
-</div> 
-<div class="full-width-img" style="background-image: url('photos/yeast.JPG');">
-</div>
-<div class="container">
-    <div class="row">
-        <div class="twelve column" style="margin-top: 5%">
-            <h4>Evolutionary Dynamics and Population Genetics</h4>
-            <p>We use both theory and experiments to study evolutionary dynamics and population genetics, particularly in situations where natural selection is pervasive.</p>
+    <div class="full-width-img" style="background-image: url('photos/yeast.JPG');">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="twelve column" style="margin-top: 5%">
+                <h4>Evolutionary Dynamics and Population Genetics</h4>
+                <p>We use both theory and experiments to study evolutionary dynamics and population genetics,
+                    particularly in situations where natural selection is pervasive.</p>
+            </div>
         </div>
     </div>
-</div>
-<!--
+    <!--
 <div class='joke'>   
     <div id="big_title">
         <h1 id="the_title">THE DESAI LAB</h1>
@@ -80,7 +83,8 @@
 </div>
 -->
 
-<!-- End Document
+    <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+
 </html>
