--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     </div>
     <div class="full-width-img" style="background-image: url('photos/yeast.JPG');">
     </div>
-    <div class="container">
+    <div class="container" id="takeaway">
         <div class="row">
             <div class="twelve column" style="margin-top: 5%">
-                <h4>Evolutionary Dynamics and Population Genetics</h4>
-                <p>We use both theory and experiments to study evolutionary dynamics and population genetics,
+                <p>We use both theory and experiments to study <span class="emph">evolutionary
+                        dynamics</span> and <span class="emph">population
+                        genetics</span>,
                     particularly in situations where natural selection is pervasive.</p>
             </div>
         </div>
