standardize markdown formatting

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <!-- Basic Page Needs
@@ -27,45 +28,51 @@
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– 
     <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    
+
     <script src="../js/responsive_menu.js"></script>
 
 </head>
+
 <body>
 
-  <!-- Primary Page Layout
+    <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="container">
-    <div class="row"> 
-        <div class="title_part">
-            <div class="row">
-                <div class="twelve columns">
-                    <h1>The Desai Lab</h1>
+    <div class="container">
+        <div class="row">
+            <div class="title_part">
+                <div class="row">
+                    <div class="twelve columns">
+                        <h1>The Desai Lab</h1>
+                    </div>
                 </div>
             </div>
-        </div> 
- 
-        <div class="topnav twelve columns" id="myTopnav">
-            <a href="../">Home</a>
-            <a href="../research">Research</a>
-            <a href="../publications">Publications</a>
-            <a href="../people">People</a>
-            <a href="../opportunities">Opportunities</a>
-            <a href="../contact" class="active"><u>Contact</u></a>
-            <a href="javascript:void(0);" class="icon" onclick="menu_change()">
-                <i class="fa fa-bars"></i>
-            </a>
+
+            <div class="topnav twelve columns" id="myTopnav">
+                <a href="../">Home</a>
+                <a href="../research">Research</a>
+                <a href="../publications">Publications</a>
+                <a href="../people">People</a>
+                <a href="../opportunities">Opportunities</a>
+                <a href="../contact" class="active"><u>Contact</u></a>
+                <a href="javascript:void(0);" class="icon" onclick="menu_change()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
         </div>
     </div>
-</div> 
-<div class="container">
-    <div class="row">
-        <div class="twelve column" style="margin-top: 5%">
-            <h2>Contact</h2>
-            <p1>Michael Desai<br />FAS Center for Systems Biology<br />457.20 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>mdesai[at]oeb.harvard.edu</i><br /><br />Phone (Office):  617-496-3613<br />Phone (Lab):  617-496-3385<br /><br />Administrative Assistant:  Melinda Peterson<br />457.10 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>mpeterson[at]fas.harvard.edu</i><br /><br />Phone (Office): 617-495-2419</p1>
+    <div class="container">
+        <div class="row">
+            <div class="twelve column" style="margin-top: 5%">
+                <h2>Contact</h2>
+                <p1>Michael Desai<br />FAS Center for Systems Biology<br />457.20 Northwest Labs<br />52 Oxford
+                    Street<br />Cambridge, MA 02138<br /><i>mdesai[at]oeb.harvard.edu</i><br /><br />Phone (Office):
+                    617-496-3613<br />Phone (Lab): 617-496-3385<br /><br />Administrative Assistant: Melinda
+                    Peterson<br />457.10 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA
+                    02138<br /><i>mpeterson[at]fas.harvard.edu</i><br /><br />Phone (Office): 617-495-2419</p1>
+            </div>
         </div>
     </div>
-</div>
 
 </body>
+
 </html>
