simplify: use <strong> instead of class

--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
     <div class="container" id="takeaway">
         <div class="row">
             <div class="twelve column" style="margin-top: 5%">
-                <p>We use both theory and experiments to study <span class="emph">evolutionary
-                        dynamics</span> and <span class="emph">population
-                        genetics</span>,
+                <p>We use both theory and experiments to study <strong>evolutionary
+                        dynamics</strong> and <strong>population genetics</strong>,
                     particularly in situations where natural selection is pervasive.</p>
             </div>
         </div>
