center title and navigation, fix first selection of menu icon

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
                 </div>
             </div>
 
-            <div class="topnav twelve columns" id="myTopnav">
-                <a href="./" class="active"><u>Home</u></a>
-                <a href="./research">Research</a>
-                <a href="./publications">Publications</a>
-                <a href="./people">People</a>
-                <a href="./opportunities">Opportunities</a>
-                <a href="./contact">Contact</a>
-                <a href="javascript:void(0);" class="icon" onclick="menu_change()">
-                    <i class="fa fa-bars"></i>
-                </a>
+            <div class="topnav" id="myTopnav">
+                <div id="nav-link-container">
+                    <a href="./" class="active" id="home-nav-link"><u>Home</u></a>
+                    <a href="./research">Research</a>
+                    <a href="./publications">Publications</a>
+                    <a href="./people">People</a>
+                    <a href="./opportunities">Opportunities</a>
+                    <a href="./contact">Contact</a>
+                    <a href="javascript:void(0);" class="icon" onclick="menu_change()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
