--- a/internal/index.html
+++ b/internal/index.html
@@ -51,17 +51,19 @@
                 </div>
             </div>
 
-            <div class="topnav twelve columns" id="myTopnav">
-                <a href="../">Home</a>
-                <a href="../research">Research</a>
-                <a href="../publications">Publications</a>
-                <a href="../people">People</a>
-                <a href="../opportunities">Opportunities</a>
-                <a href="../contact" class="active"><u>Contact</u></a>
-                <a href="../internal" class="active"><u>Internal</u></a>
-                <a href="javascript:void(0);" class="icon" onclick="menu_change()">
-                    <i class="fa fa-bars"></i>
-                </a>
+            <div class="topnav" id="myTopnav">
+                <div id="nav-link-container">
+                    <a href="../">Home</a>
+                    <a href="../research">Research</a>
+                    <a href="../publications">Publications</a>
+                    <a href="../people">People</a>
+                    <a href="../opportunities">Opportunities</a>
+                    <a href="../contact" class="active"><u>Contact</u></a>
+                    <a href="../internal" class="active"><u>Internal</u></a>
+                    <a href="javascript:void(0);" class="icon" onclick="menu_change()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
