--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -51,16 +51,18 @@
                 </div>
             </div>
 
-            <div class="topnav twelve columns" id="myTopnav">
-                <a href="../">Home</a>
-                <a href="../research">Research</a>
-                <a href="../publications">Publications</a>
-                <a href="../people">People</a>
-                <a href="../opportunities" class="active"><u>Opportunities</u></a>
-                <a href="../contact">Contact</a>
-                <a href="javascript:void(0);" class="icon" onclick="menu_change()">
-                    <i class="fa fa-bars"></i>
-                </a>
+            <div class="topnav" id="myTopnav">
+                <div id="nav-link-container">
+                    <a href="../" id="home-nav-link">Home</a>
+                    <a href="../research">Research</a>
+                    <a href="../publications">Publications</a>
+                    <a href="../people">People</a>
+                    <a href="../opportunities" class="active"><u>Opportunities</u></a>
+                    <a href="../contact">Contact</a>
+                    <a href="javascript:void(0);" class="icon" onclick="menu_change()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
