update Alex bio

--- a/people/index.html
+++ b/people/index.html
@@ -220,9 +220,10 @@
             <div class="seven columns">
                 <p1><b>Alex Poret</b></p1><br />
                 <p2>Graduate Student in Biophysics</p2>
-                <p>Alex joined the lab in 2023 after completing her B. Sc. in Biological Engineering from MIT in 2022.
-                    She is developing gene editing and barcoding systems to probe how epistasis constrains the
-                    trajectory of evolution in microorganisms.</p>
+                <p>Alex joined the lab in 2023 after earning her B.Sc. in Biological Engineering from MIT. She is using
+                    computational and synthetic biology approaches to model the evolution of antibodies within the
+                    germinal center; her research aims to uncover the extent to which B cell trajectories are
+                    constrained during affinity maturation.</p>
                 <p3><i>aporet [at] g.harvard.edu</i></p3>
             </div>
         </div>
