--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
     <div class="container" id="takeaway">
         <div class="row">
             <div class="twelve column" style="margin-top: 5%">
-                <p>We use both theory and experiments to study <strong>evolutionary
-                        dynamics</strong> and <strong>population genetics</strong>,
-                    particularly in situations where natural selection is pervasive.</p>
+                <p>We use theory and experiments to study <strong>evolutionary dynamics</strong> and <strong>population
+                        genetics</strong>, particularly when selection is pervasive.</p>
             </div>
         </div>
     </div>
