--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -73,34 +73,35 @@
             </div>
         </div>
         <div class="row">
-            <div class="twelve columns opps">
-                <h4>Graduate Students:</h4>
-                <p2>We are always looking for good students to join the lab. Given the interdisciplinary nature of our
-                    work, students from a variety of backgrounds (e.g. biology, math, physics, computer science,
-                    engineering) are encouraged to apply. The Desai lab is affiliated with a number of graduate programs
-                    at Harvard, so there are a number of possible routes to join the lab. This includes the <a
-                        href="http://www.oeb.harvard.edu/">Department of Organismic and Evolutionary Biology</a> (OEB),
+            <div class="twelve columns">
+                <p>If you reach out about a potential graduate or postdoctoral position,
+                    please include a CV and a brief description of your background and interests.</p>
+
+                <p style="margin-bottom: 0.5rem"><strong>Graduate students</strong><br>
+                    Students from a variety of backgrounds (e.g. biology, math, physics, computer science,
+                    engineering) are encouraged to apply. If you are already a graduate student at Harvard (or another
+                    area institution) and are interested in
+                    our work, contact Michael Desai to discuss opportunities. Otherwise, the lab is affiliated with
+                    several graduate programs at Harvard, so there are a number of possible routes to join the lab,
+                    including through the <a href="http://www.oeb.harvard.edu/">Department of Organismic and
+                        Evolutionary
+                        Biology</a> (OEB),
                     the <a href="http://www.physics.harvard.edu/academics/grad/">Department of Physics</a>, the <a
                         href="https://www.mcb.harvard.edu/graduate/mco/">Molecules Cells and Organisms</a> (MCO)
-                    graduate program, and the <a href="http://sysbiophd.harvard.edu/">Systems Biology</a> program.
-                    Various other programs (e.g. Biophysics or SEAS) are also possible routes to the lab. Potential
-                    applicants should contact Michael Desai in advance of submitting their application. Include a CV and
-                    a brief description of your background and interests.</p2><br />
-                <br />
-                If you are already a graduate student at Harvard (or another area institution) and are interested in our
-                work, contact Michael Desai to discuss opportunities. Include a CV and a brief descriptions of your
-                background and interests.
+                    program, the <a href="http://sysbiophd.harvard.edu/">Systems Biology</a> program, as well
+                    as others such as Biophysics and SEAS.
+                    Potential applicants should contact Michael Desai in advance of submitting their application.
+                </p>
             </div>
             <div class="twelve columns opps">
-                <h4>Postdocs:</h4>
-                <p2>We are not actively looking for new postdocs at the moment. However, if you are potentially
-                    interested in a postdoc position, please email Michael Desai. Include a CV and a brief summary of
-                    your research interests and experience.</p2>
+                <p style="margin-bottom: 0.5rem"><strong>Postdocs</strong><br>
+                    We are not actively looking for new postdocs at the moment. However, if you are potentially
+                    interested in a postdoc position, please email Michael Desai.</p>
             </div>
             <div class="twelve columns opps">
-                <h4>Undergraduate Students:</h4>
-                <p2>Positions for undergraduate students interested in experimental evolution or evolutionary theory are
-                    available. Interested students should contact Michael Desai.</p2>
+                <p style="margin-bottom: 0"><strong>Undergraduate students</strong><br>
+                    Positions for undergraduate students interested in experimental evolution or evolutionary theory are
+                    available. Interested students should contact Michael Desai.</p>
             </div>
         </div>
     </div>
