--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
             <div class="title_part">
                 <div class="row">
                     <div class="twelve columns">
-                        <h1>The Desai Lab</h1>
+                        <h1><a href="/" class="home-link">The Desai Lab</a></h1>
                     </div>
                 </div>
             </div>
