--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
     <script src="js/responsive_menu.js"></script>
-
 </head>
 
 <body>
@@ -46,7 +45,7 @@
             <div class="title_part">
                 <div class="row">
                     <div class="twelve columns">
-                        <h1>The Desai Lab</h1>
+                        <h1><a href="/" class="home-link">The Desai Lab</a></h1>
                     </div>
                 </div>
             </div>
