refine email text

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="row">
-            <p>If you reach out about a potential graduate or postdoctoral position,
+            <p>If you reach out about a potential graduate or postdoc position,
                 please include a CV and a brief description of your background and interests.</p>
 
             <p><strong>Graduate students</strong><br>
