--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Favicon
-    –––––––––––––––––––––––––––––––––––––––––––––––––– 
-    <link rel="icon" type="image/png" href="images/favicon.png"> -->
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <script src="js/responsive_menu.js"></script>
 </head>
