refine title and add description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Desai Lab Webpage</title>
+    <title>The Desai Lab</title>
+    <meta name="description"
+        content="We use theory and experiments to study evolutionary dynamics and population genetics, particularly when selection is pervasive.">
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
